# Extrae-rs

./: .gitignore  Cargo.toml  Readme.md
.github/workflows/: tests.yml
extrae-macros/: Cargo.toml
extrae-macros/src/: lib.rs
extrae-rs/: Cargo.toml
extrae-rs/src/: bufferinfo.rs  bufferset.rs  event.rs  global_config.rs  profiler.rs  thread_info.rs
extrae-rs/tests/: test_executables.rs
extrae_macros/: Cargo.toml
extrae_macros/src/: lib.rs
src/: buffer.rs  bufferinfo.rs  bufferset.rs  declarative_macros.rs  global_config.rs  global_info.rs  lib.rs  nameset.rs  parser.rs  perf.rs  profiler.rs  program.rs  subscriber.rs  thread_info.rs  visualizer.rs
tests/: test_executables.rs
