[package]
name = "extrae-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["sched","fs","hostname","feature"] }

[dependencies.extrae_macros]
path = "extrae_macros" # Crucial: Path to the proc-macro crate
version = "0.1.0"

[[bin]]
name = "program"
path = "bin/program.rs"

[[bin]]
name = "visualizer"
path = "bin/visualizer.rs"

[features]
profiling = [] # Define the profiling feature (can be empty)
