[package]
name = "extrae-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["sched","fs","hostname","feature"] }

[dependencies.extrae-macros]
path = "extrae-macros" # Crucial: Path to the proc-macro crate
version = "0.1.0"

[[bin]]
name = "program_threads"
path = "bin/program_threads.rs"

[[bin]]
name = "program_declarative.rs"
path = "bin/program_declarative.rs"

[[bin]]
name = "program_procedural"
path = "bin/program_procedural.rs"

[[bin]]
name = "visualizer"
path = "bin/visualizer.rs"

[features]
profiling = [] # Define the profiling feature (can be empty)
